Change twitch auth redirect url

--- a/streamstickers/twitch/auth/index.html
+++ b/streamstickers/twitch/auth/index.html
@@ -6,7 +6,7 @@
 <body>
     <script>
         const hash = window.location.hash.substring(1);
-        window.location.href = `streamstickers://auth${hash ? '#' + hash : ''}`;
+        window.location.href = `streamstickerstwitch://auth${hash ? '#' + hash : ''}`;
     </script>
 </body>
 </html>
